crates/keron-lang/tests/corpus/errors/check/parse_int_non_nullable_assign.snap
---
source: crates/keron-lang/tests/harness/mod.rs
assertion_line: 75
---
error: type mismatch: expected `Int`, found `Int?`
  --> 4:14
  |
4 | val n: Int = parse_int("42")
  |              ^^^^^^^^^^^^^^^^
